gcc/testsuite/g++.dg/modules/mod++-decl-3.C
// { dg-options "-fmodules-atom" }

int i;
import baz; // { dg-error "expected" }

